deploy: 4226eac0fcd0f6ae67465f5d8f19f1a2cc636873

--- a/method_list.html
+++ b/method_list.html
@@ -1942,13 +1942,21 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="RedAmber/SubFrames.html#take-instance_method" title="RedAmber::SubFrames#take (method)">#take</a></span>
+      <small>RedAmber::SubFrames</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="RedAmber/VectorSelectable.html#take-instance_method" title="RedAmber::VectorSelectable#take (method)">#take</a></span>
       <small>RedAmber::VectorSelectable</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#take-instance_method" title="RedAmber::DataFrameSelectable#take (method)">#take</a></span>
       <small>RedAmber::DataFrameSelectable</small>
@@ -1956,7 +1964,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#tally-instance_method" title="RedAmber::Vector#tally (method)">#tally</a></span>
       <small>RedAmber::Vector</small>
@@ -1964,7 +1972,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#tan-instance_method" title="RedAmber::Vector#tan (method)">#tan</a></span>
       <small>RedAmber::Vector</small>
@@ -1972,7 +1980,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#tan_checked-instance_method" title="RedAmber::Vector#tan_checked (method)">#tan_checked</a></span>
       <small>RedAmber::Vector</small>
@@ -1980,7 +1988,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#tdr-instance_method" title="RedAmber::DataFrameDisplayable#tdr (method)">#tdr</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -1988,7 +1996,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#tdr_str-instance_method" title="RedAmber::DataFrameDisplayable#tdr_str (method)">#tdr_str</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -1996,7 +2004,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#tdra-instance_method" title="RedAmber::DataFrameDisplayable#tdra (method)">#tdra</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -2004,7 +2012,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#temporal%3F-instance_method" title="RedAmber::Vector#temporal? (method)">#temporal?</a></span>
       <small>RedAmber::Vector</small>
@@ -2012,7 +2020,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#to_a-instance_method" title="RedAmber::DataFrame#to_a (method)">#to_a</a></span>
       <small>RedAmber::DataFrame</small>
@@ -2020,7 +2028,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#to_ary-instance_method" title="RedAmber::Vector#to_ary (method)">#to_ary</a></span>
       <small>RedAmber::Vector</small>
@@ -2028,7 +2036,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#to_h-instance_method" title="RedAmber::DataFrame#to_h (method)">#to_h</a></span>
       <small>RedAmber::DataFrame</small>
@@ -2036,7 +2044,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#to_iruby-instance_method" title="RedAmber::DataFrameDisplayable#to_iruby (method)">#to_iruby</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -2044,7 +2052,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameReshaping.html#to_long-instance_method" title="RedAmber::DataFrameReshaping#to_long (method)">#to_long</a></span>
       <small>RedAmber::DataFrameReshaping</small>
@@ -2052,7 +2060,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#to_rover-instance_method" title="RedAmber::DataFrame#to_rover (method)">#to_rover</a></span>
       <small>RedAmber::DataFrame</small>
@@ -2060,7 +2068,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#to_s-instance_method" title="RedAmber::Vector#to_s (method)">#to_s</a></span>
       <small>RedAmber::Vector</small>
@@ -2068,7 +2076,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/SubFrames.html#to_s-instance_method" title="RedAmber::SubFrames#to_s (method)">#to_s</a></span>
       <small>RedAmber::SubFrames</small>
@@ -2076,7 +2084,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#to_s-instance_method" title="RedAmber::DataFrameDisplayable#to_s (method)">#to_s</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -2084,7 +2092,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameReshaping.html#to_wide-instance_method" title="RedAmber::DataFrameReshaping#to_wide (method)">#to_wide</a></span>
       <small>RedAmber::DataFrameReshaping</small>
@@ -2092,7 +2100,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameReshaping.html#transpose-instance_method" title="RedAmber::DataFrameReshaping#transpose (method)">#transpose</a></span>
       <small>RedAmber::DataFrameReshaping</small>
@@ -2100,7 +2108,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#trunc-instance_method" title="RedAmber::Vector#trunc (method)">#trunc</a></span>
       <small>RedAmber::Vector</small>
@@ -2108,7 +2116,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#type-instance_method" title="RedAmber::Vector#type (method)">#type</a></span>
       <small>RedAmber::Vector</small>
@@ -2116,7 +2124,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#type_class-instance_method" title="RedAmber::Vector#type_class (method)">#type_class</a></span>
       <small>RedAmber::Vector</small>
@@ -2124,7 +2132,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#type_classes-instance_method" title="RedAmber::DataFrame#type_classes (method)">#type_classes</a></span>
       <small>RedAmber::DataFrame</small>
@@ -2132,7 +2140,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#types-instance_method" title="RedAmber::DataFrame#types (method)">#types</a></span>
       <small>RedAmber::DataFrame</small>
@@ -2140,7 +2148,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#unbiased_variance-instance_method" title="RedAmber::Vector#unbiased_variance (method)">#unbiased_variance</a></span>
       <small>RedAmber::Vector</small>
@@ -2148,7 +2156,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameCombinable.html#union-instance_method" title="RedAmber::DataFrameCombinable#union (method)">#union</a></span>
       <small>RedAmber::DataFrameCombinable</small>
@@ -2156,7 +2164,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#unique-instance_method" title="RedAmber::Vector#unique (method)">#unique</a></span>
       <small>RedAmber::Vector</small>
@@ -2164,7 +2172,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/SubFrames.html#universal%3F-instance_method" title="RedAmber::SubFrames#universal? (method)">#universal?</a></span>
       <small>RedAmber::SubFrames</small>
@@ -2172,7 +2180,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#v-instance_method" title="RedAmber::DataFrameSelectable#v (method)">#v</a></span>
       <small>RedAmber::DataFrameSelectable</small>
@@ -2180,7 +2188,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#value_counts-instance_method" title="RedAmber::Vector#value_counts (method)">#value_counts</a></span>
       <small>RedAmber::Vector</small>
@@ -2188,7 +2196,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#variables-instance_method" title="RedAmber::DataFrame#variables (method)">#variables</a></span>
       <small>RedAmber::DataFrame</small>
@@ -2196,7 +2204,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Group.html#variance-instance_method" title="RedAmber::Group#variance (method)">#variance</a></span>
       <small>RedAmber::Group</small>
@@ -2204,7 +2212,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#variance-instance_method" title="RedAmber::Vector#variance (method)">#variance</a></span>
       <small>RedAmber::Vector</small>
@@ -2212,7 +2220,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#vectors-instance_method" title="RedAmber::DataFrame#vectors (method)">#vectors</a></span>
       <small>RedAmber::DataFrame</small>
@@ -2220,7 +2228,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#xor-instance_method" title="RedAmber::Vector#xor (method)">#xor</a></span>
       <small>RedAmber::Vector</small>
