deploy: c1d34dbae769029a82b3a5de886ea032c0768e49

--- a/method_list.html
+++ b/method_list.html
@@ -1630,13 +1630,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#sample-instance_method" title="RedAmber::DataFrameSelectable#sample (method)">#sample</a></span>
+      <small>RedAmber::DataFrameSelectable</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameLoadSave.html#save-instance_method" title="RedAmber::DataFrameLoadSave#save (method)">#save</a></span>
       <small>RedAmber::DataFrameLoadSave</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#schema-instance_method" title="RedAmber::DataFrame#schema (method)">#schema</a></span>
       <small>RedAmber::DataFrame</small>
@@ -1644,7 +1652,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#sd-instance_method" title="RedAmber::Vector#sd (method)">#sd</a></span>
       <small>RedAmber::Vector</small>
@@ -1652,7 +1660,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/SubFrames.html#select-instance_method" title="RedAmber::SubFrames#select (method)">#select</a></span>
       <small>RedAmber::SubFrames</small>
@@ -1660,7 +1668,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameCombinable.html#semi_join-instance_method" title="RedAmber::DataFrameCombinable#semi_join (method)">#semi_join</a></span>
       <small>RedAmber::DataFrameCombinable</small>
@@ -1668,7 +1676,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameCombinable.html#set_operable%3F-instance_method" title="RedAmber::DataFrameCombinable#set_operable? (method)">#set_operable?</a></span>
       <small>RedAmber::DataFrameCombinable</small>
@@ -1676,7 +1684,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrame.html#shape-instance_method" title="RedAmber::DataFrame#shape (method)">#shape</a></span>
       <small>RedAmber::DataFrame</small>
@@ -1684,7 +1692,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/DataFrameDisplayable.html#shape_str-instance_method" title="RedAmber::DataFrameDisplayable#shape_str (method)">#shape_str</a></span>
       <small>RedAmber::DataFrameDisplayable</small>
@@ -1692,7 +1700,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/VectorUpdatable.html#shift-instance_method" title="RedAmber::VectorUpdatable#shift (method)">#shift</a></span>
       <small>RedAmber::VectorUpdatable</small>
@@ -1700,7 +1708,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#shift_left-instance_method" title="RedAmber::Vector#shift_left (method)">#shift_left</a></span>
       <small>RedAmber::Vector</small>
@@ -1708,7 +1716,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#shift_left_checked-instance_method" title="RedAmber::Vector#shift_left_checked (method)">#shift_left_checked</a></span>
       <small>RedAmber::Vector</small>
@@ -1716,7 +1724,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#shift_right-instance_method" title="RedAmber::Vector#shift_right (method)">#shift_right</a></span>
       <small>RedAmber::Vector</small>
@@ -1724,10 +1732,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="RedAmber/Vector.html#shift_right_checked-instance_method" title="RedAmber::Vector#shift_right_checked (method)">#shift_right_checked</a></span>
       <small>RedAmber::Vector</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="RedAmber/DataFrameSelectable.html#shuffle-instance_method" title="RedAmber::DataFrameSelectable#shuffle (method)">#shuffle</a></span>
+      <small>RedAmber::DataFrameSelectable</small>
     </div>
   </li>
   
