deploy: 5c9a6d599be7a515a8d8abdeb85d4647a7d0f79e

--- a/method_list.html
+++ b/method_list.html
@@ -622,7 +622,7 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#end_with%3F-instance_method" title="RedAmber::VectorStringFunction#end_with? (method)">#end_with?</a></span>
+      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#end_with-instance_method" title="RedAmber::VectorStringFunction#end_with (method)">#end_with</a></span>
       <small>RedAmber::VectorStringFunction</small>
     </div>
   </li>
@@ -1238,7 +1238,7 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#match_like%3F-instance_method" title="RedAmber::VectorStringFunction#match_like? (method)">#match_like?</a></span>
+      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#match_like-instance_method" title="RedAmber::VectorStringFunction#match_like (method)">#match_like</a></span>
       <small>RedAmber::VectorStringFunction</small>
     </div>
   </li>
@@ -1246,7 +1246,7 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#match_substring%3F-instance_method" title="RedAmber::VectorStringFunction#match_substring? (method)">#match_substring?</a></span>
+      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#match_substring-instance_method" title="RedAmber::VectorStringFunction#match_substring (method)">#match_substring</a></span>
       <small>RedAmber::VectorStringFunction</small>
     </div>
   </li>
@@ -1926,7 +1926,7 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#start_with%3F-instance_method" title="RedAmber::VectorStringFunction#start_with? (method)">#start_with?</a></span>
+      <span class='object_link'><a href="RedAmber/VectorStringFunction.html#start_with-instance_method" title="RedAmber::VectorStringFunction#start_with (method)">#start_with</a></span>
       <small>RedAmber::VectorStringFunction</small>
     </div>
   </li>
